# OpenAMR_UI_package

./: README.md  compile_ui.bash  install_openamr_deps.bash  launch.bash
.github/: FUNDING.yml
openamr_ui_package/: README.md  package.xml  setup.cfg  setup.py
openamr_ui_package/launch/: README.md  amcl_launch.py  gmapping_launch.py  map_server_launch.py  mapping_launch.py  move_base_launch.py  navigation_launch.py  new_ui_launch.py  physnode_launch.py  ui_launch.py
openamr_ui_package/maps/: README.md
openamr_ui_package/maps/Welcome/: Start.yaml  Start_ros.yaml
openamr_ui_package/openamr_ui_package/: README.md  battery.py  flask_app.py  folders_handler.py  waypoint_nav.py
openamr_ui_package/openamr_ui_package/static/: README.md
openamr_ui_package/openamr_ui_package/static/css/: main.f33dbf63.css  main.f33dbf63.css.map
openamr_ui_package/openamr_ui_package/static/js/: main.3a2e4cce.js.map  main.463a04ea.js.map  main.e298549d.js.map  main.js  nav2d.js  roslib.js
openamr_ui_package/openamr_ui_package/submodules/: README.md  nodechecker.py
openamr_ui_package/openamr_ui_package/templates/: README.md  index.html
openamr_ui_package/param/: README.md  config.yaml  current_map_route.yaml
openamr_ui_package/param/move_base/: base_local_planner_default_params.yaml
openamr_ui_package/paths/: README.md
openamr_ui_package/paths/Group1/Map1/: Route1.csv
openamr_ui_package/paths/Group1/Map3/: RouteTest.csv
openamr_ui_package/paths/Group3/house1/: Route1.csv
openamr_ui_package/resource/: README.md
openamr_ui_package/test/: config.yaml
(+42 files in other folders)
